Constrain cards images only on height to avoid squishing of meld, dfc, flip.
Fixes #593.

--- a/decksite/static/css/pd.css
+++ b/decksite/static/css/pd.css
@@ -306,7 +306,6 @@ ul.menu {
 
 .card-img {
     height: 22.25rem;
-    width: 15.6rem;
     padding-top: 1rem;
 }
 
